--- a/poo-lab.html
+++ b/poo-lab.html
@@ -176,8 +176,8 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_trabalho2_pc2.pdf"> Notas do Trabalho 2 (Atualizado em <b>04/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6/src"> <i>Código Incompleto do Exercício Prático 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 					
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/ExemploDataHora/src"> <i>Código para lidar com Data/Hora em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/pc2-parte1.zip"> Exercícios Lab. Parte 1</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/avaliacao_trab_3.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Script de Avaliação </b></a></li> 
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro.pdf"> Roteiro (Trabalho 2)</a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/avaliacao_trab_3.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Script de Avaliação </b></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_pc2_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais </b></a></li> -->
 					</ul>
 					</div> 
