--- a/poo.html
+++ b/poo.html
@@ -86,9 +86,9 @@
 					<ul>
 					<li>Prova 1 - 25 pts <b>(Terça-feira, 15/09 às 13:00)</b> - <i> Aulas 1, 2, 3, 4 e 5</i></li>
 					<li>Prova 2 - 30 pts <b>(Terça-feira, 20/10 às 13:00)</b> - <i> Aulas 6, 7 e 8</i></li>
+					<li>Prova 3 - 30 pts <b>(Terça-feira, 24/11 às 13:00)</b> - <i> Aulas 9, 10, 11 e 12</i></li>
 					<li>Lista 1 - 7,5 pts <b>(Data de Entrega: 03/11)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>
 					<li>Lista 2 - 7,5 pts <b>(Data de Entrega: 03/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<!--<li>Prova 3 - 35 pts <b>(16/06)</b></li> -->					
 					</ul>
 					</div> 
 					<b>Material:</b> 
