--- a/gsi526.html
+++ b/gsi526.html
@@ -86,7 +86,7 @@
 					<ul>
 					<li>Prova 1 - 25 pts <b>(14/10)</b> - <i>Aulas 01 a 07</i></li>
 					<li>Prova 2 - 30 pts <b>(09/11)</b> - <i>Aulas 08 a 11</i></li>
-					<li>Prova 3 - 30 pts <b>(26/11)</b></i></li>
+					<li>Prova 3 - 30 pts <b>(26/11)</b> - <i>Aulas 12 a 15</i></li>
 					<!--<li>Lista 1 - 1,5 pts <b>(13/04)</b></i></li>
 					<li>Lista 2 - 1,5 pts <b>(13/04)</b></i></li>
 					<li>Lista 3 - 2,0 pts <b>(15/06)</b></i></li>
@@ -96,7 +96,7 @@
 					<div>
 						<b>Material:</b> 
 						<ul>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-requisitos.pptx"> Aula 01 - Requisitos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-requisitos.pptx"> Aula 01 - Requisitos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-processos.pptx"> Aula 02 - Processos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=D39AikmEIuI"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-scrum.pptx"> Aula 03 - O Método Ágil Scrum</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g1FBFwAW_78"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-smells.pptx"> Aula 04 - Reengenharia, Refatoração e Bad Smell</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)</li>
@@ -105,10 +105,10 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-padroes-arquiteturais.pptx"> Aula 07 - Padrões Arquiteturais</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Bw5CcmbzyWQ"> Ver Videoaula </a>)</li> 
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula8-qualidade.pptx"> Aula 08 - Qualidade de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula9-testes.pptx"> Aula 09 - Testes de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/lxTZCuq6O9A"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-linha-de-produtos.pptx"> Aula 10 - Linha de Produtos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-controle-versao.pptx"> Aula 11 - Sistemas de Controle de Versão</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula12-idiomas-programacao.pptx"> Aula 12 - Idiomas de Programação</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula13-devops.pptx"> Aula 13 - DevOps</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/AovtkO8_sx4"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-linha-de-produtos.pptx"> Aula 10 - Linha de Produtos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-controle-versao.pptx"> Aula 11 - Sistemas de Controle de Versão</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula12-idiomas-programacao.pptx"> Aula 12 - Idiomas de Programação</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula13-devops.pptx"> Aula 13 - DevOps</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/AovtkO8_sx4"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula14-principios-de-projeto.pptx"> Aula 14 - Princípios de Projeto</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula15-padroes-de-projeto-parte-1.pptx"> Aula 15 - Padrões de Projeto (Parte 1)</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9wZnhCBdzbA"> Ver Videoaula </a>)</li> 
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 02 - Extreme Programming.pdf"> Aula 02 - Extreme Programming</a></button></li>
