--- a/poo-lab.html
+++ b/poo-lab.html
@@ -92,8 +92,8 @@
 					<ul>
 					<li>Trabalho 1 - 30 pts <b>(Entrega: 24/09)</b><a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Trabalho 1 </i></a></li>
 					<li>Trabalho 2 - 30 pts <b>(Entrega: 29/10)</b><a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Trabalho 2 </i></a></li>
-					<li>Trabalho 3 - 30 pts <b>(Entrega: 30/11)</b><a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Trabalho 3 </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li>Vídeo - 2,5 pts <b>(Entrega: 30/11)</b></li>
+					<li>Trabalho 3 - 30 pts <b>(Entrega: 01/12)</b><a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Trabalho 3 </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li>Vídeo - 2,5 pts <b>(Entrega: 01/12)</b></li>
 					<li>Exercícios Práticos - 7,5 pts</li>
 					<!--<li>Prova 2 - 35 pts <b>(22/10)</b></li>
 					<li>Prova 3 - 35 pts <b>(26/11)</b></li> -->					
@@ -177,7 +177,8 @@
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6/src"> <i>Código Incompleto do Exercício Prático 6</i></a></li> 					
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/ExemploDataHora/src"> <i>Código para lidar com Data/Hora em Java</i></a></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/CidadesDoBrasil/src"> <i>Código para lidar com HashMap em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro.pdf"> Roteiro (Trabalho 2)</a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho2.pdf"> Roteiro (Trabalho 2)</a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho3.pdf"> Roteiro (Trabalho 3)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/avaliacao_trab_3.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Script de Avaliação </b></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_pc2_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais </b></a></li> -->
 					</ul>
