comentario na rede social

--- a/poo-lab.html
+++ b/poo-lab.html
@@ -177,6 +177,7 @@
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6/src"> <i>Código Incompleto do Exercício Prático 6</i></a></li> 					
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/ExemploDataHora/src"> <i>Código para lidar com Data/Hora em Java</i></a></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/CidadesDoBrasil/src"> <i>Código para lidar com HashMap em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/POOAulas/src"> <i>Pseudocódigo para exemplificar o comentário na rede social</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>					
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho2.pdf"> Roteiro (Trabalho 2)</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho3.pdf"> Roteiro (Trabalho 3)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/avaliacao_trab_3.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Script de Avaliação </b></a></li> 
