--- a/poo.html
+++ b/poo.html
@@ -88,13 +88,13 @@
 					<li>Prova 2 - 30 pts <b>(Terça-feira, 20/10 às 13:00)</b> - <i> Aulas 6, 7 e 8</i></li>
 					<li>Prova 3 - 30 pts <b>(Terça-feira, 24/11 às 13:00)</b> - <i> Aulas 9, 10, 11 e 12</i></li>
 					<li>Lista 1 - 7,5 pts <b>(Data de Entrega: 03/11)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>
-					<li>Lista 2 - 7,5 pts <b>(Data de Entrega: 03/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li>Lista 2 - 7,5 pts <b>(Data de Entrega: 03/12)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>
 					</ul>
 					</div> 
 					<b>Material:</b> 
 					<div>
 						<ul>	
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução a Java.ppt"> Aula 03 - Introdução a Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a></li>
@@ -141,7 +141,7 @@
 					<div>
 					<b>Videoaulas:</b>
 					<ul>
-					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=wNaoX6VOj54&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=4"> Criando Classes e Objetos em Java </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=jFI-qqitzwk&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=6"> O que é Visibilidade em um Objeto? </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=LV2243j4RTQ&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=7"> Configurando Visibilidade de Atributos e Métodos </a></li>
@@ -164,7 +164,7 @@
 					<li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li> -->
 					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> Notas da Prova 1 </a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/lista1_pc2.pdf"> Lista 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
-					<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 2 <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
+					<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 2 <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					</ul>
 					</div> 
 				</div>
