data e hora da prova 3 de es

--- a/gsi526.html
+++ b/gsi526.html
@@ -86,7 +86,7 @@
 					<ul>
 					<li>Prova 1 - 25 pts <b>(14/10)</b> - <i>Aulas 01 a 07</i></li>
 					<li>Prova 2 - 30 pts <b>(09/11)</b> - <i>Aulas 08 a 11</i></li>
-					<li>Prova 3 - 30 pts <b>(30/11)</b> - <i>Aulas 12 a 16</i></li>
+					<li>Prova 3 - 30 pts <b>(30/11 às 10:40)</b> - <i>Aulas 12 a 16</i></li>
 					<!--<li>Lista 1 - 1,5 pts <b>(13/04)</b></i></li>
 					<li>Lista 2 - 1,5 pts <b>(13/04)</b></i></li>
 					<li>Lista 3 - 2,0 pts <b>(15/06)</b></i></li>
