notas e comentarios do trabalho 2

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -93,6 +93,7 @@
 					<li>Primeira Fase e Arguição - 30 pts <b> (28/10)</b> - <a href="aulas/lab-programacao/notas_parciais_trabalho2.pdf"> Notas (Atualizado em <b>23/11 às 11:30</b>)</a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li>
 					<li>Segunda Fase e Arguição - 30 pts <b> (02/12)</b></li>
 					<li>Vídeo do Trabalho - 10 pts <b> (02/12)</b></li>
+					<li> <i><a href="aulas/lab-programacao/notas_trabalho2.pdf"> Notas e Comentários do Trabalho 2 (Atualizado em <b>04/12 às 18:00</b>)</a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li>
 					</ul>
 					</ul>
 					</div> 
