atualizei o site das disciplinas do cefet mg 2021-1

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2020 - Engenharia de Computação</span>
+				<span>Disciplinas 1º Semestre de 2021 - Engenharia de Computação</span>
 				<h2>Engenharia de Software I Lab.</h2>
 			</div>
 		</div>
@@ -82,7 +82,7 @@
 					</ul>
 					</div> 
 					<div>
-					<b>Avaliação e Prazos:</b>
+					<!--<b>Avaliação e Prazos:</b>
 					<ul>
 					<li>Trabalho 1 - 30 pts <b>(Entrega: 30/09)</b> - <i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i></li>
 					<ul>
@@ -100,7 +100,7 @@
 					<div>
 					<b>Material:</b>
 						<ul>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Git.pptx"> Aula 02 - Git</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 04 - CSS.pdf"> Aula 04 - CSS</a></button></li>
