--- a/gsi526.html
+++ b/gsi526.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2020 - Engenharia de Computação</span>
+				<span>Disciplinas 1º Semestre de 2021 - Engenharia de Computação</span>
 				<h2>Engenharia de Software I</h2>
 			</div>
 		</div>
@@ -84,19 +84,18 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(14/10)</b> - <i>Aulas 01 a 07</i></li>
-					<li>Prova 2 - 30 pts <b>(09/11)</b> - <i>Aulas 08 a 11</i></li>
-					<li>Prova 3 - 30 pts <b>(30/11 às 10:40)</b> - <i>Aulas 12 a 16</i></li>
-					<!--<li>Lista 1 - 1,5 pts <b>(13/04)</b></i></li>
-					<li>Lista 2 - 1,5 pts <b>(13/04)</b></i></li>
-					<li>Lista 3 - 2,0 pts <b>(15/06)</b></i></li>
-					<li>Seminário - 10 pts <b>(18/06 e 22/06)</b></li> -->
+					<li>Prova 1 - 25 pts</li>
+					<li>Prova 2 - 30 pts</li>
+					<li>Prova 3 - 30 pts</li>
+					<li>Lista 1 - 5 pts</li>
+					<li>Lista 2 - 5 pts</li>
+					<li>Lista 3 - 5 pts</li>
 					</ul>
 					</div> 
 					<div>
-						<b>Material:</b> 
+						<!--<b>Material:</b> --> 
 						<ul> 
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-requisitos.pptx"> Aula 01 - Requisitos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)</li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-requisitos.pptx"> Aula 01 - Requisitos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-processos.pptx"> Aula 02 - Processos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=D39AikmEIuI"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-scrum.pptx"> Aula 03 - O Método Ágil Scrum</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g1FBFwAW_78"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-smells.pptx"> Aula 04 - Reengenharia, Refatoração e Bad Smell</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)</li>
@@ -142,9 +141,9 @@
 						</ul> -->
 					</div>
 					<div>
-					<b>Listas:</b> 
+					<!-- <b>Listas:</b> --> 
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>14/10</b>)</a></button> </li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>14/10</b>)</a></button> </li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>09/11</b>)</a> <img src="images/deadline.png" alt="" height="25" width="19"></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>30/11</b>)</a> <img src="images/deadline.png"" alt="" height="25" width="19"></button></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
