--- a/poo-lab.html
+++ b/poo-lab.html
@@ -68,19 +68,19 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2020 - Engenharia Elétrica</span>
+				<span>Disciplinas 1º Semestre de 2021 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2 Lab.</h2>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
-					<div>
+					<!--<div>
 					<b>Monitoria:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
-					</div> 
+					</div> --> 
 					<div>
 					<b>Plano:</b>
 					<ul>
@@ -90,19 +90,19 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(Entrega: 24/09)</b><a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Trabalho 1 </i></a></li>
-					<li>Trabalho 2 - 30 pts <b>(Entrega: 29/10)</b><a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Trabalho 2 </i></a></li>
-					<li>Trabalho 3 - 30 pts <b>(Entrega: 01/12)</b><a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Trabalho 3 </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li>Vídeo - 2,5 pts <b>(Entrega: 01/12)</b></li>
+					<li>Trabalho 1 - 30 pts <!--<b>(Entrega: 24/09)</b><a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Trabalho 1 </i></a> --></li> 
+					<li>Trabalho 2 - 30 pts <!--<b>(Entrega: 29/10)</b><a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Trabalho 2 </i></a> --></li> 
+					<li>Trabalho 3 - 30 pts <!--<b>(Entrega: 01/12)</b><a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Trabalho 3 </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li> 
+					<li>Vídeo - 2,5 pts <!--<b>(Entrega: 01/12)</b>--></li> 
 					<li>Exercícios Práticos - 7,5 pts</li>
 					<!--<li>Prova 2 - 35 pts <b>(22/10)</b></li>
 					<li>Prova 3 - 35 pts <b>(26/11)</b></li> -->					
 					</ul>
 					</div>  
-					<b>Material:</b>
+					<!-- <b>Material:</b> -->
 					<div>
 						<ul>						
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 3.pdf"> Exercício Prático 3</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 4.pdf"> Exercício Prático 4</a></li>
@@ -152,9 +152,9 @@
 						</ul>
 					</div>
 					<div>
-					<b>Videoaulas:</b>
+					<!-- <b>Videoaulas:</b> -->
 					<ul>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
+					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=wNaoX6VOj54&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=4"> Criando Classes e Objetos em Java </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=jFI-qqitzwk&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=6"> O que é Visibilidade em um Objeto? </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=LV2243j4RTQ&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=7"> Configurando Visibilidade de Atributos e Métodos </a></li>
@@ -165,13 +165,13 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6uLLfRNgRA4"> Interfaces </a></li> 
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=NctjqlfKC0U&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=25"> Polimorfismo em Java </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=hYek1xqWzgs&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=26"> Conceito de Polimorfismo </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=b7xGYh3NHZU&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=27"> Polimorfismo e Sobrecarga </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=b7xGYh3NHZU&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=27"> Polimorfismo e Sobrecarga </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					</ul>
 					</div> 
 					<div>
-					<b>Links diversos:</b>
+					<!-- <b>Links diversos:</b> -->
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/relatorio_atividades.pdf"> Relatório de Atividades Entregues (Atualizado em <b>04/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/relatorio_atividades.pdf"> Relatório de Atividades Entregues (Atualizado em <b>04/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_trabalho1_pc2.pdf"> Notas do Trabalho 1 (Atualizado em <b>04/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_trabalho2_pc2.pdf"> Notas do Trabalho 2 (Atualizado em <b>05/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6/src"> <i>Código Incompleto do Exercício Prático 6</i></a></li> 					
