--- a/poo.html
+++ b/poo.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2020 - Engenharia Elétrica</span>
+				<span>Disciplinas 1º Semestre de 2021 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2</h2>
 			</div>
 		</div>
@@ -84,17 +84,17 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(Terça-feira, 15/09 às 13:00)</b> - <i> Aulas 1, 2, 3, 4 e 5</i></li>
-					<li>Prova 2 - 30 pts <b>(Terça-feira, 20/10 às 13:00)</b> - <i> Aulas 6, 7 e 8</i></li>
-					<li>Prova 3 - 30 pts <b>(Terça-feira, 24/11 às 13:00)</b> - <i> Aulas 9, 10, 11 e 12</i></li>
-					<li>Lista 1 - 7,5 pts <b>(Data de Entrega: 03/11)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>
-					<li>Lista 2 - 7,5 pts <b>(Data de Entrega: 03/12)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>
+					<li>Prova 1 - 25 pts <!-- <i> Aulas 1, 2, 3, 4 e 5</i> --></li>
+					<li>Prova 2 - 30 pts <!-- <i> Aulas 6, 7 e 8</i> --></li>
+					<li>Prova 3 - 30 pts <!-- <i> Aulas 9, 10, 11 e 12</i> --></li>
+					<li>Lista 1 - 7,5 pts <!-- <img src="images/deadline.png" alt="" height="25" width="19"> --></li>
+					<li>Lista 2 - 7,5 pts <!-- <img src="images/deadline.png" alt="" height="25" width="19"> --></li>
 					</ul>
-					</div> 
-					<b>Material:</b> 
+					</div>  
+					<!-- <b>Material:</b> --> 
 					<div>
 						<ul>	
-						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução a Java.ppt"> Aula 03 - Introdução a Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a></li>
@@ -139,7 +139,7 @@
 						</ul>
 					</div> 
 					<div>
-					<b>Videoaulas:</b>
+					<!-- <b>Videoaulas:</b> -->
 					<ul>
 					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=wNaoX6VOj54&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=4"> Criando Classes e Objetos em Java </a></li>
@@ -162,9 +162,9 @@
 					<ul>
 					<!--<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Livro: Java Como Programar 6ª edição (Deitel)</i></a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li> -->
-					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> Notas da Prova 1 </a></li> 
+					<!--<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> Notas da Prova 1 </a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/lista1_pc2.pdf"> Lista 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
-					<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 2 <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
+					<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 2 <img src="images/deadline.png" alt="" height="25" width="19"></a></li> -->
 					</ul>
 					</div> 
 				</div>
