datas das avaliacoes das disciplinas do 2021-1

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -82,6 +82,13 @@
 					</ul>
 					</div> 
 					<div>
+					<b>Avaliação:</b>
+					<ul>
+					<li>Trabalho 1 <b>(24/02)</b></li>
+					<li>Trabalho 2 <b>(24/03)</b></li>
+					<li>Trabalho 3 <b>(14/04)</b></li>
+					<li>Vídeo <b>(14/04)</b></li>
+					</ul> 
 					<!--<b>Avaliação e Prazos:</b>
 					<ul>
 					<li>Trabalho 1 - 30 pts <b>(Entrega: 30/09)</b> - <i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i></li>
