--- a/poo-lab.html
+++ b/poo-lab.html
@@ -90,11 +90,11 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <!--<b>(Entrega: 24/09)</b><a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Trabalho 1 </i></a> --></li> 
-					<li>Trabalho 2 - 30 pts <!--<b>(Entrega: 29/10)</b><a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Trabalho 2 </i></a> --></li> 
-					<li>Trabalho 3 - 30 pts <!--<b>(Entrega: 01/12)</b><a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Trabalho 3 </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li> 
-					<li>Vídeo - 2,5 pts <!--<b>(Entrega: 01/12)</b>--></li> 
-					<li>Exercícios Práticos - 7,5 pts</li>
+					<li>Trabalho 1 - 30 pts <b>(11/02)</b> <!--<a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Trabalho 1 </i></a> --></li> 
+					<li>Trabalho 2 - 30 pts <b>(18/03)</b> <!--<a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Trabalho 2 </i></a> --></li> 
+					<li>Trabalho 3 - 30 pts <b>(08/04)</b> <!--<a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Trabalho 3 </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li> 
+					<li>Vídeo - 2,5 pts <b>(08/04)</b></li> 
+					<li>Exercícios Práticos - 7,5 pts <b>(Agendados pelo professor)</b></li>
 					<!--<li>Prova 2 - 35 pts <b>(22/10)</b></li>
 					<li>Prova 3 - 35 pts <b>(26/11)</b></li> -->					
 					</ul>
