curso gratuito de Python com o prof. Andre Backes

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -148,7 +148,8 @@
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/Cars.zip"> Cars GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/CarSales.zip"> Car Sales GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/database_tables.sql"> Tabelas do banco de dados MySQL (Dump)</a></li> -->
-					<li><i class="icon-stackoverflow"></i><a href="https://evolutio.io/"> <img src="images/new2.gif" alt="" height="11" width="28"> Cursos gratuitos de Python, JavaScript, Vue.js, etc.</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://programacaodescomplicada.wordpress.com/indice/python/"> <img src="images/new2.gif" alt="" height="11" width="28"> Curso gratuito de Python</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="https://evolutio.io/"> <img src="images/new2.gif" alt="" height="11" width="28"> Cursos gratuitos de JavaScript e o framework Vue.js</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw&t=714s"> <img src="images/new2.gif" alt="" height="11" width="28"> Videoaula sobre como criar um Blog usando Node.js (Back-end) e React.js (Front-end)</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=_y7rKxqPoyg&list=PLQCmSnNFVYnTD5p2fR4EXmtlR6jQJMbPb"> <img src="images/new2.gif" alt="" height="11" width="28"> Videoaulas sobre AngularJS</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="https://www.youtube.com/watch?v=-YlK0A8Goj8"> <img src="images/new2.gif" alt="" height="11" width="28"> Videoaula sobre Django 2 Web Framework (Python)</a></li>
