removacao da aula sincrona gravada

--- a/poo-lab.html
+++ b/poo-lab.html
@@ -154,9 +154,8 @@
 					<div>
 					<b>Videoaulas:</b> 
 					<ul>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/4hnlv6sbycc"> Prática 1 (Aula Síncrona Gravada) </a></li>
-					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=wNaoX6VOj54&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=4"> Criando Classes e Objetos em Java </a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
+					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=wNaoX6VOj54&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=4"> Criando Classes e Objetos em Java </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=jFI-qqitzwk&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=6"> O que é Visibilidade em um Objeto? </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=LV2243j4RTQ&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=7"> Configurando Visibilidade de Atributos e Métodos </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g2x9oyBFSco&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=8"> Métodos Especiais </a></li>
