informacoes do monitor de pc2 e seus horarios

--- a/poo-lab.html
+++ b/poo-lab.html
@@ -75,12 +75,12 @@
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
-					<!--<div>
+					<div>
 					<b>Monitoria:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
-					</div> --> 
+					</div>  
 					<div>
 					<b>Plano:</b>
 					<ul>
