definição dos grupos do trabalho

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -76,9 +76,10 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
-					<b>Plano:</b>
+					<b>Plano e Grupos do Trabalho:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/plano-didatico-es-lab.pdf"> Plano Didático</a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_dos_trabalhos.pdf"> Relação dos Grupos</a></li>
 					</ul>
 					</div> 
 					<div>
