Lista 01 de Engenharia de Software

--- a/gsi526.html
+++ b/gsi526.html
@@ -141,10 +141,10 @@
 						</ul> -->
 					</div>
 					<div>
-					<!-- <b>Listas:</b> --> 
+					<b>Listas:</b> 
 					<ul>
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>14/10</b>)</a></button> </li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>09/11</b>)</a> <img src="images/deadline.png" alt="" height="25" width="19"></button></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>01/03</b>)</a></button> </li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>09/11</b>)</a> <img src="images/deadline.png" alt="" height="25" width="19"></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>30/11</b>)</a> <img src="images/deadline.png"" alt="" height="25" width="19"></button></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
@@ -157,8 +157,8 @@
 					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/GWT-Tutorial.pdf"> Tutorial: Como instalar o plugin do GWT no Eclipse IDE</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
 					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li> 
-					</ul>
-					</div> -->
+					</ul>-->
+					</div> 
 				</div> 
 			</div>
 		</div>
