Relação dos Grupos do Trabalho de Lab. ES

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -79,13 +79,13 @@
 					<b>Plano e Grupos do Trabalho:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/plano-didatico-es-lab.pdf"> Plano Didático</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_dos_trabalhos.pdf"> Relação dos Grupos</a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div> 
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li><img src="images/new2.gif" alt="" height="11" width="28"><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i> - <b>(Entrega: 24/02)</b></li>
+					<li><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i> - <b>(Entrega: 24/02)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li>Trabalho 2 <b>(Entrega: 24/03)</b></li>
 					<li>Trabalho 3 <b>(Entrega: 14/04)</b></li>
 					<li>Vídeo <b>(Entrega: 14/04)</b></li>
