grupos de lab. pc2

--- a/poo-lab.html
+++ b/poo-lab.html
@@ -82,9 +82,10 @@
 					</ul>
 					</div>  
 					<div>
-					<b>Plano:</b>
+					<b>Plano e Grupos do Trabalho:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/plano_pc2_lab.pdf"> Plano Didático</a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_lab.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div> 
 					<div>
