coloquei a ordem de apresentacao dos grupos do trab. 1 de Lab. ES

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -80,6 +80,7 @@
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/plano-didatico-es-lab.pdf"> Plano Didático</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_dos_trabalhos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/grupos_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div> 
 					<div>
