trabalho 2 de PC2 Lab.

--- a/poo-lab.html
+++ b/poo-lab.html
@@ -94,7 +94,7 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i></a></li> 
-					<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <!--<a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Trabalho 2 </i></a> --></li> 
+					<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i></a></li> 
 					<li>Trabalho 3 - 30 pts <b>(Entrega: 08/04)</b> <!--<a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Trabalho 3 </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li> 
 					<li>Vídeo - 2,5 pts <b>(Entrega: 08/04)</b></li> 
 					<li>Exercícios Práticos - 7,5 pts <b>(Agendados pelo professor)</b></li>
