retirei o link do YouTube da Pratica 6

--- a/poo-lab.html
+++ b/poo-lab.html
@@ -174,7 +174,7 @@
 					<div>
 					<b>Links diversos:</b> 
 					<ul>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gpK4z85E7NA"> Aula Síncrona Gravada - Prática 6 </a> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
+					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gpK4z85E7NA"> Aula Síncrona Gravada - Prática 6 </a> <img src="images/new2.gif" alt="" height="11" width="28"></li> -->
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6a/src"> <i>Código da Prática 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>	
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica5/src"> <i>Código da Prática 5</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/ComparatorExample/src"> <i>Código com um exemplo do Comparator em Java</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
