coloquei uma figura de fogo para indicar que a atividade já ocorreu no semestre

--- a/poo.html
+++ b/poo.html
@@ -84,7 +84,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(09/02)</b><!-- Hoje! <img src="images/deadline.png" alt="" height="25" width="19"><!-- <i> Aulas 1, 2, 3, 4 e 5</i> --></li>
+					<li>Prova 1 - 25 pts <b>(09/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"><!-- <i> Aulas 1, 2, 3, 4 e 5</i> --></li>
 					<li>Prova 2 - 30 pts <b>(23/03)</b><!-- <i> Aulas 6, 7 e 8</i> --></li>
 					<li>Prova 3 - 30 pts <b>(13/04)</b><!-- <i> Aulas 9, 10, 11 e 12</i> --></li>
 					<li>Lista 1 - 7,5 pts <b>(23/03)</b><!-- <img src="images/deadline.png" alt="" height="25" width="19"> --></li>
@@ -99,7 +99,7 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução ao Java.ppt"> Aula 03 - Introdução ao Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 06 - Herança</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 06 - Herança</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 08 - Coleções</a></li> 
 						<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 09 - Polimorfismo</a></li>
