--- a/gsi526.html
+++ b/gsi526.html
@@ -84,10 +84,10 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(01/03)</b> - <i> Aulas 01, 02, 03, 04, 05, 06 e 07</i></li>
+					<li>Prova 1 - 25 pts <b>(01/03)</b> <img src="images/deadline.png"" alt="" height="25" width="19"> <!-- - <i> Aulas 01, 02, 03, 04, 05, 06 e 07</i> --></li>
 					<li>Prova 2 - 30 pts <b>(29/03)</b></li>
 					<li>Prova 3 - 30 pts <b>(12/04)</b></li>
-					<li>Lista 1 - 5 pts <b>(01/03)</b></li>
+					<li>Lista 1 - 5 pts <b>(01/03)</b> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
 					<li>Lista 2 - 5 pts <b>(29/03)</b></li>
 					<li>Lista 3 - 5 pts <b>(12/04)</b></li>
 					</ul>
@@ -143,7 +143,7 @@
 					<div>
 					<b>Listas:</b> 
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>01/03</b>)</a></button></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>01/03</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>29/03</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>30/11</b>)</a> <img src="images/deadline.png"" alt="" height="25" width="19"></button></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
