--- a/poo-lab.html
+++ b/poo-lab.html
@@ -87,13 +87,13 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/plano_pc2_lab.pdf"> Plano Didático</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_lab.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
 					</ul>
 					</div> 
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i></a></li> 
+					<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					<li>Trabalho 3 - 30 pts <b>(Entrega: 08/04)</b> <!--<a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Trabalho 3 </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li> 
 					<li>Vídeo - 2,5 pts <b>(Entrega: 08/04)</b></li> 
