coloquei os links para as videoaulas do Teams

--- a/gsi526.html
+++ b/gsi526.html
@@ -141,6 +141,17 @@
 						</ul> -->
 					</div>
 					<div>
+					<b>Aulas Síncronas Gravadas no Teams:</b> 
+					<ul>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=79669"> Aula 01 - Requisitos de Software</a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=79675"> Aula 02 - Processos de Software</a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99340"> Aula 03 - Tecnologias para desenvolvimento Web</a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99860"> Aula 04 - Aula sobre Web Services</a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=100564"> Aula 05 - Versionamento de Software com Git</a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=101232"> Aula 06 - Refactorings e Code Smells</a></li>
+					</ul>
+					</div> 
+					<div>
 					<b>Listas:</b> 
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>01/03</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
