retirei a lista 2 do site

--- a/poo.html
+++ b/poo.html
@@ -164,7 +164,7 @@
 					<li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li> -->
 					<!--<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> Notas da Prova 1 </a></li> -->
 					<li><i class="icon-book"></i><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 (Entrega: <b>23/03</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
-					<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 (Entrega: <b>13/04</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
+					<!--<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 (Entrega: <b>13/04</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li> -->
 					</ul>
 					</div> 
 				</div>
