novas datas e instrucoes para o trabalho 2 de Lab. ES

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -87,10 +87,16 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i> - <b>(Entrega: 24/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>
-					<li><i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2</a></i> - <b>(Entrega: 24/03)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li>Trabalho 3 <b>(Entrega: 14/04)</b></li>
-					<li>Vídeo <b>(Entrega: 14/04)</b></li>
+					<li><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1 - 30 pts</a></i> - <b>(Data de Entrega: 24/02)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>
+					<li><i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2 - 70 pts</a></i> - <b>(Próxima Entrega: 24/03)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<ul>
+					<li>Diagrama de Casos de Uso - 10 pts <b>(24/03)</b></li>
+					<li>Apresentação do Sistema  - 60 pts <b>(14/04)</b></li>
+					<!--<li><i><a href="aulas/lab-programacao/notas_trabalho2.pdf"> Notas e Comentários do Trabalho 2 (Atualizado em <b>04/12 às 18:00</b>)</a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li> -->
+					</ul>
+					</ul> 
+					<!--<li>Trabalho 3 <b>(Entrega: 14/04)</b></li>
+					<li>Vídeo <b>(Entrega: 14/04)</b></li> 
 					</ul> 
 					<!--<b>Avaliação e Prazos:</b>
 					<ul>
