material de ES desabilitado

--- a/gsi526.html
+++ b/gsi526.html
@@ -95,7 +95,7 @@
 					<div>
 						<b>Material:</b>  
 						<ul> 
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-requisitos.pptx"> Aula 01 - Requisitos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)</li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-requisitos.pptx"> Aula 01 - Requisitos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-processos.pptx"> Aula 02 - Processos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=D39AikmEIuI"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-scrum.pptx"> Aula 03 - O Método Ágil Scrum</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g1FBFwAW_78"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-smells.pptx"> Aula 04 - Reengenharia, Refatoração e Bad Smell</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)</li>
@@ -143,7 +143,7 @@
 					<div>
 					<b>Aulas Síncronas Gravadas no Teams:</b> 
 					<ul>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=79669"> Aula 01 - Requisitos de Software</a></li>
+					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=79669"> Aula 01 - Requisitos de Software</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=79675"> Aula 02 - Processos de Software</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99340"> Aula 03 - Tecnologias para desenvolvimento Web</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99860"> Aula 04 - Aula sobre Web Services</a></li>
